<resources>
    <string name="app_name">All4Ole - Welcome To Israel! </string>
    <string name="people">People like me</string>
    <string name="help">Look for help</string>
    <string name="hobbies">Hobbies:</string>
    <string name="hobby1">Sports</string>
    <string name="hobby2">Cooking</string>
    <string name="hobby3">Music</string>
    <string name="hobby4">Reading</string>
    <string name="hobby5">Art</string>
    <string name="hobby6">Gaming</string>
    <string name="hobby7">Hiking</string>
    <string name="hobby8">Pets</string>
    <string name="help1">Bureaucracy</string>
    <string name="help2">Education</string>
    <string name="help3">Work</string>
    <string name="help4">Food</string>
    <string name="help5">Banks</string>
    <string name="help6">Translation</string>
    <string name="help7">Babysitter</string>
    <string name="help8">Lawyers</string>
    <string name="setHelp">Change help</string>
    <string name="canHelp">Can Help with:</string>
    <string name="profileDisplay">My Profile</string>
    <string name="otherProfileDisplay">%1$s %2$s</string>
    <string name="phone">Phone: %1$s</string>
    <string name="email">Email: %1$s</string>
    <string name="country">Origin Country: %1$s</string>
    <string name="language">Language: %1$s</string>
    <string name="area">Residential Area: %1$s</string>
    <string name="marital_status">Marital Status: %1$s</string>
    <string name="children">%1$s little children</string>
    <string name="Register">Register</string>
    <string name="disconnect">Disconnect</string>
    <string name="welcome_home">Welcome %1$s\nWhat can we help you with? </string>
    <string name="welcome_home2">What can we help you with?</string>
    
    <string-array name="countries">
        <item>Origin country:</item>
        <item>Brazil</item>
        <item>USA</item>
        <item>France</item>
        <item>Spain</item>
        <item>Russia</item>
        <item>Britain</item>
        <item>Italy</item>
        <item>Germany</item>
    </string-array>
    <string-array name="languages">
        <item>Language:</item>
        <item>Portuguese</item>
        <item>English</item>
        <item>French</item>
        <item>Spanish</item>
        <item>Russian</item>
        <item>Italian</item>
        <item>German</item>
    </string-array>
    <string-array name="residential_areas">
        <item>Live now in:</item>
        <item>North</item>
        <item>Center</item>
        <item>South</item>
    </string-array>
    <string-array name="marital_status">
        <item>Marital status:</item>
        <item>Taken</item>
        <item>Available</item>
    </string-array>


</resources>