<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C4DEEA"
    tools:context=".HomePageScreen">


    <Button
        android:id="@+id/btnProfile"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:onClick="btnProfileOnClick"
        android:layout_alignParentEnd="true"
        android:text="View\n Profile"
        android:textAllCaps="false"
        android:background="#03A9F4"
        />
    <Button
        android:id="@+id/btnDisconnect"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:onClick="btnDisconnectOnClick"
        android:text="@string/disconnect"
        android:textAllCaps="false"
        android:background="#F44336"
        />

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_marginTop="20dp"
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome_home"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="25sp"
        android:visibility="visible" />

    <ScrollView
        android:id="@+id/helpScrollProfile"
        android:layout_width="230dp"
        android:layout_height="80dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_below="@id/welcomeTextView"
        android:layout_marginBottom="8dp"
        android:layout_centerHorizontal="true"
        >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shrinkColumns="*"
            android:stretchColumns="*">


            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="match_parent">

                <CheckBox
                    android:id="@+id/btnHelp1"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:text="@string/help1" />

                <CheckBox
                    android:id="@+id/btnHelp2"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:text="@string/help2" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="match_parent">

                <CheckBox
                    android:id="@+id/btnHelp3"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:text="@string/help3" />

                <CheckBox
                    android:id="@+id/btnHelp4"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:text="@string/help4" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="match_parent">

                <CheckBox
                    android:id="@+id/btnHelp5"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:text="@string/help5" />

                <CheckBox
                    android:id="@+id/btnHelp6"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:text="@string/help6" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="match_parent">

                <CheckBox
                    android:id="@+id/btnHelp7"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:text="@string/help7" />

                <CheckBox
                    android:id="@+id/btnHelp8"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:text="@string/help8" />
            </TableRow>
        </TableLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/helpScrollProfile"
        android:layout_alignStart="@+id/helpScrollProfile"
        android:layout_alignEnd="@+id/helpScrollProfile"
        android:onClick="btnHelpOnClick"
        android:text="@string/help"
        android:textAllCaps="false"
        android:background="#03A9F4"
        />


    <ScrollView
        android:id="@+id/hobbiesScrollProfile"
        android:layout_width="230dp"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        android:layout_below="@id/btnHelp"
        android:layout_marginBottom="8dp"
        android:layout_alignStart="@+id/btnHelp"
        android:layout_alignEnd="@+id/btnHelp"

        >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shrinkColumns="*"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/btnHobby1"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:text="@string/hobby1" />

                <CheckBox
                    android:id="@+id/btnHobby2"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:text="@string/hobby2" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="match_parent">

                <CheckBox
                    android:id="@+id/btnHobby3"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:text="@string/hobby3"
                    />

                <CheckBox
                    android:id="@+id/btnHobby4"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:text="@string/hobby4" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="match_parent">

                <CheckBox
                    android:id="@+id/btnHobby5"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:text="@string/hobby5" />

                <CheckBox
                    android:id="@+id/btnHobby6"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:text="@string/hobby6" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="match_parent">

                <CheckBox
                    android:id="@+id/btnHobby7"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:text="@string/hobby7" />

                <CheckBox
                    android:id="@+id/btnHobby8"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:text="@string/hobby8" />

            </TableRow>
        </TableLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnHobby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="btnHobbyOnClick"
        android:text="Find Friend"
        android:layout_marginTop="10dp"
        android:layout_alignStart="@+id/hobbiesScrollProfile"
        android:layout_alignEnd="@+id/hobbiesScrollProfile"
        android:layout_below="@+id/hobbiesScrollProfile"
        android:textAllCaps="false"
        android:background="#03A9F4"
        android:gravity="center"/>

    <Button
        android:id="@+id/btnPeople"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnHobby"
        android:layout_marginTop="45dp"
        android:onClick="btnPeopleOnClick"
        android:text="@string/people"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:background="#03A9F4"
        android:layout_alignStart="@+id/btnHobby"
        android:layout_alignEnd="@+id/btnHobby"
        />


</RelativeLayout>